<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DPFinal</string>
    <string name="title">DPTranslate! spanish to english</string>
    <string name="translate">Go</string>
    <string name="menu_settings">Settings</string>
    <string name="stMeans">Means:</string>
    <string name="editHint">Enter text in spanish</string>
    <string name="hintDummy">Introduce texto en español</string>
    <string name="read">Read</string>
    <string name="title_activity_sentence">SentenceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>